[emacs] Downgrade undo-tree in preparation for reconfigure package

--- a/emacs.org
+++ b/emacs.org
@@ -3211,7 +3211,7 @@ When popping mark, skip consecutive identical marks. The idea is from
   (use-package undo-tree
     :straight t
     :bind
-    (:map undo-tree-mode-map
+    (:map undo-tree-map
      ("M-/" . undo-tree-redo))
     :init
     (global-undo-tree-mode)
