[emacs] Prefer thread-last to thread-first

--- a/emacs.org
+++ b/emacs.org
@@ -8289,7 +8289,7 @@ It's part of tangling [[*yasnippet - Snippets][embedded snippets]].
       (when (derived-mode-p 'emacs-lisp-mode)
         (let* ((file-name (buffer-file-name))
                (package-dir (file-name-directory file-name))
-               (package-name (thread-first
+               (package-name (thread-last
                                package-dir
                                directory-file-name
                                file-name-base))
