[emacs] Tweak exar--get-monitors

--- a/emacs.org
+++ b/emacs.org
@@ -1332,7 +1332,8 @@ For monitors and monitor layouts, see [[*Monitors][Monitors]].
                        outputs nil)))
       (mapcar (pcase-lambda (`(,id . ,props))
                 (let ((output (thread-first
-                                (plist-get props :edid)
+                                props
+                                (plist-get :edid)
                                 (assoc output-ids)
                                 cdr
                                 (alist-get outputs))))
