[emacs] Prefer remq to seq-remove

--- a/emacs.org
+++ b/emacs.org
@@ -7359,7 +7359,7 @@ Stavrou)]].
                 (thread-last
                   prepcast-prep-fs
                   (mapcar #'funcall)
-                  (seq-remove #'null))))
+                  (remq nil))))
       (mapc #'funcall prepcast--unprep-fs)
       (setq prepcast--unprep-fs nil)))
 
