[emacs] Rename koek/download-dir to koek/downloads-dir

--- a/emacs.org
+++ b/emacs.org
@@ -9583,9 +9583,9 @@ Define well known directories.
     (or (koek/get-user-dir "XDG_DOCUMENTS_DIR") koek/home-dir)
     "File name to documents directory.")
 
-  (defvar koek/download-dir
+  (defvar koek/downloads-dir
     (or (koek/get-user-dir "XDG_DOWNLOAD_DIR") koek/home-dir)
-    "File name to download directory.")
+    "File name to downloads directory.")
 
   (defvar koek/music-dir
     (or (koek/get-user-dir "XDG_MUSIC_DIR") koek/home-dir)
@@ -9780,7 +9780,7 @@ Configure downloads.
   (use-package eww
     :defer t
     :config
-    (setq eww-download-directory koek/download-dir))
+    (setq eww-download-directory koek/downloads-dir))
 #+END_SRC
 
 ** E-mail accounts
