--- a/emacs.org
+++ b/emacs.org
@@ -3065,15 +3065,17 @@ VC configuration is a stub.
   (use-package git-commit
     :defer t
     :preface
+    (defun koek-git/setup-ispell ()
+      (setq-local ispell-skip-region-alist
+                  (append (list
+                           (list (rx line-start "#") #'forward-line)) ; Comment
+                          ispell-skip-region-alist)))
+
     (defun koek-git/check-spelling (force)
       "Check spelling of commit message.
   When FORCE is truthy, unconditionally continue commit."
       (let ((tick (buffer-chars-modified-tick))
-            (result
-             (let ((ispell-skip-region-alist ; Dynamic variable
-                    (cons (list (rx line-start "#") #'forward-line) ; Comment
-                          ispell-skip-region-alist)))
-               (ispell-buffer))))
+            (result (ispell-buffer)))
         (cond
          (force
           t)
@@ -3084,6 +3086,7 @@ VC configuration is a stub.
           (or (= (buffer-chars-modified-tick) tick)
               (y-or-n-p "Spelling checked.  Commit? "))))))
     :config
+    (add-hook 'git-commit-setup-hook #'koek-git/setup-ispell)
     (add-hook 'git-commit-finish-query-functions #'koek-git/check-spelling))
 #+END_SRC
 
