--- a/emacs.org
+++ b/emacs.org
@@ -3077,8 +3077,7 @@ VC configuration is a stub.
       (let ((tick (buffer-chars-modified-tick))
             (result (ispell-buffer)))
         (cond
-         (force
-          t)
+         (force)
          ;; When spell check was completed, result is truthy
          (result
           ;; When nothing was corrected, character tick counter is
