[emacs] Setup ispell in message buffers

--- a/emacs.org
+++ b/emacs.org
@@ -6570,6 +6570,18 @@ For e-mail accounts, see [[*E-mail accounts][E-mail accounts]].
   (use-package message
     :defer t
     :preface
+    (defun koek-msg/setup-ispell ()
+      (setq-local
+       ispell-skip-region-alist
+       (append (list
+                ;; Citation line
+                (list (rx line-start (one-or-more not-newline) " writes:" line-end)
+                      #'forward-line)
+                ;; Citation
+                (list (rx line-start (regexp message-cite-prefix-regexp))
+                      #'forward-line))
+               ispell-skip-region-alist)))
+
     (defun koek-msg/check-spelling ()
       "Check spelling of e-mail."
       (let ((tick (buffer-chars-modified-tick)))
@@ -6580,6 +6592,7 @@ For e-mail accounts, see [[*E-mail accounts][E-mail accounts]].
     :config
     (setq message-send-mail-function #'smtpmail-send-it)
     (setq message-beginning-of-line nil)
+    (add-hook 'message-mode-hook #'koek-msg/setup-ispell)
     (add-hook 'message-send-hook #'koek-msg/check-spelling))
 
   (use-package mu4e-compose
