[emacs] Tweak confirm prompts and abort message

--- a/emacs.org
+++ b/emacs.org
@@ -3083,7 +3083,7 @@ VC configuration is a stub.
           ;; When nothing was corrected, character tick counter is
           ;; unchanged
           (or (= (buffer-chars-modified-tick) tick)
-              (y-or-n-p "Spelling checked.  Commit? "))))))
+              (y-or-n-p "Spelling checked.  Commit changes? "))))))
     :config
     (add-hook 'git-commit-setup-hook #'koek-git/setup-ispell)
     (add-hook 'git-commit-finish-query-functions #'koek-git/check-spelling))
@@ -6587,8 +6587,8 @@ For e-mail accounts, see [[*E-mail accounts][E-mail accounts]].
       (let ((tick (buffer-chars-modified-tick)))
         (ispell-message)
         (unless (or (= (buffer-chars-modified-tick) tick)
-                    (y-or-n-p "Spelling checked.  Send? "))
-          (user-error "Send aborted"))))
+                    (y-or-n-p "Spelling checked.  Send message? "))
+          (user-error "Message send aborted")))) ; Mirror ispell-message
     :config
     (setq message-send-mail-function #'smtpmail-send-it)
     (setq message-beginning-of-line nil)
