[emacs] Update eldoc on smartparens functions

--- a/emacs.org
+++ b/emacs.org
@@ -6215,6 +6215,7 @@ Inherit Clojure snippets.
     :bind
     ("C-c d e" . eldoc-doc-buffer)
     :config
+    (eldoc-add-command-completions "sp-")
     (setq eldoc-echo-area-use-multiline-p nil)
     :delight)
 #+END_SRC
