[emacs] Support modus-themes 4.2

--- a/emacs.org
+++ b/emacs.org
@@ -8723,7 +8723,10 @@ Define theme infrastructure.
     (run-hooks 'koek-thm/enable-hook))
 
   (defvar koek-thm/dark-themes
-    '(modus-vivendi modus-vivendi-deuteranopia modus-vivendi-tinted)
+    '(modus-vivendi
+      modus-vivendi-deuteranopia
+      modus-vivendi-tritanopia
+      modus-vivendi-tinted)
     "List of theme symbols.
   Themes are dark themes.")
 
@@ -8781,9 +8784,11 @@ current theme.
     (defvar koek-mt/variants
       '(modus-operandi
         modus-operandi-deuteranopia
+        modus-operandi-tritanopia
         modus-operandi-tinted
         modus-vivendi
         modus-vivendi-deuteranopia
+        modus-vivendi-tritanopia
         modus-vivendi-tinted))
 
     (defun koek-mt/enable (variant)
@@ -8837,6 +8842,7 @@ current theme.
     (defvar koek-mt/complements
       (let ((pairs '((modus-operandi              . modus-vivendi)
                      (modus-operandi-deuteranopia . modus-vivendi-deuteranopia)
+                     (modus-operandi-tritanopia   . modus-vivendi-tritanopia)
                      (modus-operandi-tinted       . modus-vivendi-tinted))))
         (append pairs
                 (mapcar (pcase-lambda (`(,a . ,b))
